--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="12F45" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="mE2-eC-boU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13E28" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="mE2-eC-boU">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
     </dependencies>
     <scenes>
         <!--Resister View Controller - Register/Update Account-->
@@ -140,7 +140,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9d-mG-yhB">
-                                <rect key="frame" x="401" y="651" width="247" height="29"/>
+                                <rect key="frame" x="562" y="791" width="247" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -180,6 +180,20 @@
                                     <action selector="updateAccount:" destination="Qjb-O7-rrr" eventType="touchUpInside" id="e99-Yo-thw"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DTs-2m-LYE">
+                                <rect key="frame" x="536" y="918" width="102" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Make QR Card">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="handleGenerateButtonPressed:" destination="Qjb-O7-rrr" eventType="touchUpInside" id="RIE-cj-gtX"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YmJ-hv-85a">
+                                <rect key="frame" x="186" y="301" width="398" height="557"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -195,6 +209,7 @@
                         <outlet property="payDateLabel" destination="t9d-mG-yhB" id="JS8-r9-FyN"/>
                         <outlet property="phoneTextField" destination="Qkc-Lc-0cd" id="fnq-ej-JoI"/>
                         <outlet property="profileImageView" destination="dKb-PE-pjn" id="hnM-pe-Wbl"/>
+                        <outlet property="qrImageView" destination="YmJ-hv-85a" id="4Wj-iT-q21"/>
                         <outlet property="recentTestDateButton" destination="YgZ-ZV-2oV" id="uoq-um-Qvo"/>
                         <outlet property="recentTestDateLabel" destination="c7k-Xh-Vkc" id="ovx-h4-tY8"/>
                         <outlet property="registerButton" destination="5b7-Vh-c4a" id="8Tm-cI-PSY"/>
@@ -223,7 +238,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iHj-1k-jt0">
-                                <rect key="frame" x="337" y="901" width="94" height="30"/>
+                                <rect key="frame" x="238" y="892" width="292" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Start Reading">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -232,8 +247,8 @@
                                     <action selector="startStopReadingButtonPressed:" destination="27m-J0-JFA" eventType="touchUpInside" id="SRd-Mv-YDJ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vuw-Mf-MDE">
-                                <rect key="frame" x="363" y="792" width="42" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vuw-Mf-MDE">
+                                <rect key="frame" x="223" y="792" width="322" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -245,6 +260,11 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xq6-Qe-3dI">
+                                <rect key="frame" x="38" y="87" width="692" height="663"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -254,7 +274,8 @@
                         <outlet property="currentStatusLabel" destination="pPK-cY-88z" id="E7X-eU-iZ4"/>
                         <outlet property="qRCodeImageView" destination="eC6-ui-xbb" id="RuF-5f-E2h"/>
                         <outlet property="qRCodeInformationLabel" destination="vuw-Mf-MDE" id="JDB-QQ-xse"/>
-                        <outlet property="startStopReadingButton" destination="iHj-1k-jt0" id="oDn-yq-mUU"/>
+                        <outlet property="startStopReadingButton" destination="iHj-1k-jt0" id="2FX-CA-wuo"/>
+                        <outlet property="viewPreview" destination="Xq6-Qe-3dI" id="98b-a9-Imc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VWl-cO-fnw" userLabel="First Responder" sceneMemberID="firstResponder"/>
