--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--Resister View Controller - Register/Update Account-->
+        <!--Resister View Controller - Title-->
         <scene sceneID="lKj-RB-G1w">
             <objects>
                 <viewController id="Qjb-O7-rrr" customClass="ResisterViewController" sceneMemberID="viewController">
@@ -219,12 +219,27 @@
                                     <action selector="resetAllInputs:" destination="Qjb-O7-rrr" eventType="touchUpInside" id="iBx-wR-S6i"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b1g-4z-N2P">
+                                <rect key="frame" x="716" y="20" width="32" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Next">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k5n-tD-5p1">
+                                <rect key="frame" x="20" y="20" width="31" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Prev">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Register/Update Account" image="register.png" id="u71-Q4-rrv">
                         <inset key="imageInsets" minX="6" minY="10" maxX="6" maxY="10"/>
                     </tabBarItem>
+                    <navigationItem key="navigationItem" title="Title" id="NOb-N5-6t9"/>
                     <connections>
                         <outlet property="addressTextField" destination="T9r-Zv-g3A" id="QUa-0N-MCc"/>
                         <outlet property="dateOfBirthButton" destination="ihH-6E-aVT" id="CY2-AT-se1"/>
@@ -232,9 +247,11 @@
                         <outlet property="emailTextField" destination="UpW-dm-5lj" id="fCD-3W-wMV"/>
                         <outlet property="iDTextField" destination="7yj-B0-xsT" id="zcg-ud-YLO"/>
                         <outlet property="nameTextField" destination="rzx-mR-BnH" id="xHP-x0-HYv"/>
+                        <outlet property="nextButton" destination="b1g-4z-N2P" id="Z42-xb-oWf"/>
                         <outlet property="payDateButton" destination="LZu-fM-iO0" id="lmT-gu-Zoe"/>
                         <outlet property="payDateLabel" destination="t9d-mG-yhB" id="JS8-r9-FyN"/>
                         <outlet property="phoneTextField" destination="Qkc-Lc-0cd" id="fnq-ej-JoI"/>
+                        <outlet property="prevButton" destination="k5n-tD-5p1" id="aFX-Dx-wa1"/>
                         <outlet property="profileImageView" destination="dKb-PE-pjn" id="hnM-pe-Wbl"/>
                         <outlet property="qrImageView" destination="YmJ-hv-85a" id="4Wj-iT-q21"/>
                         <outlet property="recentTestDateButton" destination="YgZ-ZV-2oV" id="uoq-um-Qvo"/>
