--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -225,6 +225,9 @@
                                 <state key="normal" title="Next">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="nextButtomTapped:" destination="Qjb-O7-rrr" eventType="touchUpInside" id="7j7-32-CAZ"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k5n-tD-5p1">
                                 <rect key="frame" x="20" y="20" width="31" height="30"/>
@@ -232,6 +235,9 @@
                                 <state key="normal" title="Prev">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="prevButtomTapped:" destination="Qjb-O7-rrr" eventType="touchUpInside" id="JxW-Po-KQJ"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z9P-ha-fdh">
                                 <rect key="frame" x="617" y="906" width="53" height="30"/>
@@ -257,11 +263,9 @@
                         <outlet property="emailTextField" destination="UpW-dm-5lj" id="fCD-3W-wMV"/>
                         <outlet property="iDTextField" destination="7yj-B0-xsT" id="zcg-ud-YLO"/>
                         <outlet property="nameTextField" destination="rzx-mR-BnH" id="xHP-x0-HYv"/>
-                        <outlet property="nextButton" destination="b1g-4z-N2P" id="Z42-xb-oWf"/>
                         <outlet property="payDateButton" destination="LZu-fM-iO0" id="lmT-gu-Zoe"/>
                         <outlet property="payDateLabel" destination="t9d-mG-yhB" id="JS8-r9-FyN"/>
                         <outlet property="phoneTextField" destination="Qkc-Lc-0cd" id="fnq-ej-JoI"/>
-                        <outlet property="prevButton" destination="k5n-tD-5p1" id="aFX-Dx-wa1"/>
                         <outlet property="profileImageView" destination="dKb-PE-pjn" id="hnM-pe-Wbl"/>
                         <outlet property="qrImageView" destination="YmJ-hv-85a" id="4Wj-iT-q21"/>
                         <outlet property="recentTestDateButton" destination="YgZ-ZV-2oV" id="uoq-um-Qvo"/>
