--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -559,6 +559,16 @@
                                     <action selector="prepareBackupPressed:" destination="Fey-0p-wVC" eventType="touchUpInside" id="2kw-64-WnD"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4CI-5z-nQh">
+                                <rect key="frame" x="141" y="225" width="111" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Cancel Dropbox">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelDropBoxPressed:" destination="Fey-0p-wVC" eventType="touchUpInside" id="Z3g-LG-KeN"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
