--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -569,6 +569,16 @@
                                     <action selector="cancelDropBoxPressed:" destination="Fey-0p-wVC" eventType="touchUpInside" id="Z3g-LG-KeN"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="beX-E5-TDn">
+                                <rect key="frame" x="575" y="225" width="136" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Restore Attendance">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="restoreAttendancePressed:" destination="Fey-0p-wVC" eventType="touchUpInside" id="ZsK-Wd-tNb"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
